# taskman

./: README.md  pyproject.toml
src/taskman/: __main__.py  config.py  controller.py  model.py  repository.py  view.py
