[build-system]
requires = ["setuptools==65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taskman"
version = "0.1.0"
description = "taskman CLI tool"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "attrs==25.3.0",
    "jsonschema==4.25.0",
    "jsonschema-specifications==2025.4.1",
    "referencing==0.36.2",
    "rpds-py==0.26.0",
    "tabulate==0.9.0",
    "typing_extensions==4.14.1"
]

[project.scripts]
taskman = "taskman.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
